# chatter

./: .gitignore  CMakeLists.txt  Makefile  README.md  client_ui.md  plan.md
glade/: client.glade  client.glade~
include/: audio.h  client.h  server.h  utils.h
output/: main
sample/: Makefile  chatroom.c  hashmap.h  sock.c  sock.h
src/: audio.c  client.c  client.glade  client_console.c  main.c  server.c  utils.c
